[gd_scene load_steps=6 format=3 uid="uid://by6yg1bnu67bs"]

[ext_resource type="Script" uid="uid://c4qr75i4dked3" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Gradient" id="Gradient_vue75"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l6cm7"]
gradient = SubResource("Gradient_vue75")
fill = 1
fill_from = Vector2(0.522936, 0.490826)

[sub_resource type="FontFile" id="FontFile_vue75"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_l6cm7"]
font = SubResource("FontFile_vue75")
font_size = 45
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
texture = SubResource("GradientTexture2D_l6cm7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Puzzle Colors"
label_settings = SubResource("LabelSettings_l6cm7")

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play
"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelSelectButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select
"

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
